<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/titlelayout"></android.support.v4.view.ViewPager>

    <LinearLayout
        android:id="@+id/titlelayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <RadioGroup
            android:id="@+id/tab_menu"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/title1"
                style="@style/tab_style"
                android:checked="true"
                android:text="@string/homepage" />

            <RadioButton
                android:id="@+id/title2"
                style="@style/tab_style"
                android:text="@string/service" />

            <RadioButton
                android:id="@+id/title3"
                style="@style/tab_style"
                android:text="@string/mine" />
        </RadioGroup>
    </LinearLayout>

</RelativeLayout>