<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hint_phone_number"
        android:imeOptions="actionDone"
        android:inputType="text"></EditText>

    <LinearLayout
        android:id="@+id/btn_dial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/et_phone_number"
        android:layout_alignRight="@id/et_phone_number"
        android:layout_below="@id/et_phone_number"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_dial_audio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:onClick="onDialAudio"
            android:text="@string/audio_call" />

        <Button
            android:id="@+id/btn_dial_video"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:onClick="onDialVideo"
            android:text="@string/video_call" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bitrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_dial"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_bitrate_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/btn_dial"
            android:layout_below="@id/btn_dial"
            android:text="Bitrate"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/dial_bitrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/text_bitrate_mode"
            android:layout_below="@id/text_bitrate_mode"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/bitrate_nano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nano" />

            <RadioButton
                android:id="@+id/bitrate_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Min" />

            <RadioButton
                android:id="@+id/bitrate_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Low" />

            <RadioButton
                android:id="@+id/bitrate_mid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mid" />

            <RadioButton
                android:id="@+id/bitrate_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="720P" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_nack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_bitrate"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_nack_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nack"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/dial_nack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/text_bitrate_mode"
            android:layout_below="@id/dial_bitrate"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/nack_low"
                android:text="Low" />

            <RadioButton
                android:id="@+id/nack_mid"
                android:text="Mid" />

            <RadioButton
                android:id="@+id/nack_high"
                android:text="High" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_auto_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_nack"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_auto_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Auto Answer"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/dial_auto_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/text_auto_answer"
            android:layout_below="@id/text_auto_answer"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/auto_answer_off"
                android:text="Off" />

            <RadioButton
                android:id="@+id/auto_answer_audio"
                android:text="with Audio" />

            <RadioButton
                android:id="@+id/auto_answer_video"
                android:text="with Video" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/dial_btn_doodle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_auto_answer"
        android:layout_marginTop="5dp"
        android:onClick="onStartDoodle"
        android:text="Start Doodle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/dial_btn_doodle"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/dial_btn_doodle"
        android:onClick="onRecord"
        android:text="Record Doodle" />

</RelativeLayout>
